--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,11 +1,12 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
-/* mixins, variables, etc. */
+ 
+/* mixins, variables, etc. */ 
 $gray-medium-light: #eaeaea;
-
+ 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
+  -webkit-box-sizing: border-box; 
   box-sizing: border-box;
 }
  
@@ -21,15 +22,15 @@ $gray-medium-light: #eaeaea;
 
 /* universal */
 body { 
-padding-top: 60px;
+  padding-top: 60px;
 }
   
 section {
-overflow: auto;
+  overflow: auto;
 }
 
 textarea {
-resize: vertical;
+  resize: vertical;
 }
 
 .center {
@@ -151,3 +152,25 @@ input, textarea, select, .uneditable-input {
 input {
   height: auto !important;
 }
+
+#error_explanation{
+  color:red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
+
+
+
+
+
+
+
